--- a/Sell.css
+++ b/Sell.css
@@ -478,4 +478,4 @@ footer .text-right-side .Support {
     margin-left: -120px;
     font-size: 13px;
   }
-}/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=Sell.css.map */
