--- a/Home.css
+++ b/Home.css
@@ -77,14 +77,15 @@ nav .hamburger {
     font-size: 16px;
     transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
-  .dropdown a {
+  .dropdown h6 {
     text-decoration: none;
     font-weight: bold;
     text-align: center;
     border-bottom: 1px solid blue;
     padding-bottom: 6px;
+    color: black;
   }
-  .dropdown a:last-child {
+  .dropdown h6:last-child {
     border-bottom: none;
     padding-bottom: 10px;
   }
