--- a/Home.scss
+++ b/Home.scss
@@ -130,15 +130,16 @@ nav .hamburger{
 transition: all .6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
 
-a{
+h6{
   text-decoration: none;
   font-weight: bold;
   text-align: center;
   border-bottom: 1px solid blue ;
   padding-bottom: 6px;
+  color: black;
 }
 
-a:last-child{
+h6:last-child{
 
 
 border-bottom: none;
