--- a/Sell.css
+++ b/Sell.css
@@ -23,6 +23,9 @@ nav li a {
   color: #0f001a;
   text-decoration: none;
 }
+nav .dropdown h6 {
+  display: none;
+}
 nav .login {
   margin-right: 100px;
 }
@@ -66,27 +69,6 @@ nav .hamburger {
     fill: black;
     padding-block: 1px;
     margin-right: -80px;
-  }
-  .dropdown {
-    background-color: aqua;
-    height: 0;
-    display: flex;
-    flex-direction: column;
-    padding-top: 20px;
-    gap: 10px;
-    font-size: 16px;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  }
-  .dropdown a {
-    text-decoration: none;
-    font-weight: bold;
-    text-align: center;
-    border-bottom: 1px solid blue;
-    padding-bottom: 6px;
-  }
-  .dropdown a:last-child {
-    border-bottom: none;
-    padding-bottom: 10px;
   }
   .register {
     display: none;
