--- a/Sell.scss
+++ b/Sell.scss
@@ -32,6 +32,14 @@ z-index: 2
     }
   }
 
+  .dropdown{
+
+h6{
+  display: none;
+}
+
+  }
+
  
 
   .login {
@@ -109,33 +117,9 @@ nav .hamburger{
 
 
 
-.dropdown{
-  background-color: aqua;
-   height: 0;
-  display: flex;
-  flex-direction: column;
-  padding-top: 20px;
-  gap: 10px;
-  font-size: 16px;
-transition: all .6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
 
-a{
-  text-decoration: none;
-  font-weight: bold;
-  text-align: center;
-  border-bottom: 1px solid blue ;
-  padding-bottom: 6px;
-}
 
-a:last-child{
-
-
-border-bottom: none;
-padding-bottom: 10px;
-}
-
-}
 
 
 
