--- a/Ads.css
+++ b/Ads.css
@@ -276,4 +276,4 @@ section .input .fa-angle-down {
   section .below-text .add-image {
     margin-left: -100px;
   }
-}/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=Ads.css.map */
