--- a/Register.css
+++ b/Register.css
@@ -382,4 +382,4 @@ footer .text-right-side .Support {
     margin-left: -120px;
     font-size: 13px;
   }
-}/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=Register.css.map */
