--- a/Ads.scss
+++ b/Ads.scss
@@ -61,21 +61,40 @@ nav {
   }
 }
 
-.dropdown {
-  opacity: 0;
-}
-
-#overlay {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
+.dropdown{
+  height: 400px;
+  width: 100%;
+  border: 1px solid red;
+ 
+  
+  top: 124px;
+ text-align: center;
+ z-index: 2;
+ position: absolute;
+  background: blue;
   overflow: hidden;
-
+  display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+   background-color: red;
+   border-radius: 25px;
+ opacity: 0;
+ z-index: -1;
+ 
+ 
+ 
+ 
+ }
+ 
+ .dropdown > a{
+   color: white;
+   text-decoration: none;
+   display: flex;
+ justify-content: center;
+ flex-direction: row;
   display: none;
-}
-
+ }
 // responsive code
 
 @media screen and (max-width: 1150px) {
@@ -86,31 +105,7 @@ nav {
     margin-right: -80px;
   }
 
-  .dropdown {
-    position: relative;
-    z-index: 2;
-    background-color: aqua;
-    height: 0;
-    display: flex;
-    flex-direction: column;
-    padding-top: 20px;
-    gap: 10px;
-    font-size: 16px;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
-    a {
-      text-decoration: none;
-      font-weight: bold;
-      text-align: center;
-      border-bottom: 1px solid blue;
-      padding-bottom: 6px;
-    }
-
-    a:last-child {
-      border-bottom: none;
-      padding-bottom: 10px;
-    }
-  }
 
   .register {
     display: none;
