--- a/Home.css
+++ b/Home.css
@@ -47,16 +47,31 @@ nav .hamburger {
 }
 
 .dropdown {
+  height: 400px;
+  width: 100%;
+  border: 1px solid red;
+  top: 124px;
+  text-align: center;
+  z-index: 2;
+  position: absolute;
+  background: blue;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: red;
+  border-radius: 25px;
   opacity: 0;
+  z-index: -1;
 }
 
-#overlay {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  overflow: hidden;
+.dropdown > a {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
   display: none;
 }
 
